--- a/src/app/pages/pag/pag.page.html
+++ b/src/app/pages/pag/pag.page.html
@@ -1,13 +1,61 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>pag</ion-title>
+    <ion-buttons slot="start">
+      <ion-title>DSOPCs</ion-title>
+      <ion-searchbar></ion-searchbar>
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pag</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h3 class="cd"> bienvenidos a DSOPCs Chile.</h3>
+ 
+  <ion-card color="light">
+    <ion-card-header>
+      <ion-card-title class="vv">Nuestros PCs</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <img alt="1" src="https://c.shld.net/rpx/i/s/i/spin/10130172/prod_18899955412??hei=64&wid=64&qlt=50" />
+    <ion-card-header>
+      <ion-card-title>PC Cybertron gamer  </ion-card-title>
+      <ion-card-subtitle>Precio: $1.200.000 clp</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Contiene Intel Core I7-8700 3.2GHz, 16GB DDR4, GeForce GTX 1060, 120GB SSD, 1TB HDD.
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <img alt="2" src="https://mmorpgbr.com.br/wp-content/uploads/2022/06/maxresdefault-12.jpeg" />
+    <ion-card-header>
+      <ion-card-title>Netbook gamer Strix G15</ion-card-title>
+      <ion-card-subtitle>precio: $800.000 clp</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+    Contiene procesador AMD Ryzen 7 4800H, 8GB de memoria RAM, 512GB de SSD de una placa de video Nvidia GeForce RTX 3050.
+    </ion-card-content>
+  
+  
+  </ion-card>
+  
+  <ion-card>
+    <img alt="3" src="http://cdn.shopify.com/s/files/1/0549/6638/6775/products/0035__0001_PC205086-Edit_jpg_b243f5e6-e5e3-4397-9cb9-94ab7b325861.jpg?v=1681376642" />
+    <ion-card-header>
+      <ion-card-title>PC Ryzen level 6</ion-card-title>
+      <ion-card-subtitle>Precio: $1.500.000</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Contiene un procesador 5600 y un RTX 3060 12GB tarjeta grafica, 32GB de memoria RAM, Geforce RTX 3060 12GB.
+    </ion-card-content>
+  </ion-card>
+  <div class="boton">
+  <ion-button color="warning" (click)="irProductos()">Ir a Productos</ion-button>
+  </div>
 </ion-content>
