--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,49 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+        <ion-buttons slot="end">
+          <ion-button [routerLink]="'/perfil'">
+          <ion-icon name="person-circle-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list>
+        <ion-item [routerDirection]="'root'" [routerLink]="'/pag'">
+          <ion-icon name="earth-outline"></ion-icon>
+          <ion-label>Pagina Principal</ion-label>
+        </ion-item>
+        
+        <ion-item [routerDirection]="'root'" [routerLink]="'/productos'">
+          <ion-icon name="bag-add-outline"></ion-icon>
+          <ion-label>Productos</ion-label>
+        </ion-item>
+
+        <ion-item [routerDirection]="'root'" [routerLink]="'/producto1'">
+          <ion-icon name="desktop-outline"></ion-icon>
+          <ion-label>Más caro</ion-label>
+        </ion-item>
+
+        <ion-item [routerDirection]="'root'" [routerLink]="'/producto2'">
+          <ion-icon name="cash-outline"></ion-icon>
+          <ion-label>Más Economico</ion-label>
+        </ion-item>
+
+        <ion-item [routerDirection]="'root'" [routerLink]="'/carro'">
+          <ion-icon name="cart-outline"></ion-icon>
+          <ion-label>Carro de compra</ion-label>
+        </ion-item>
+        
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+
+  <ion-router-outlet id="main-content"></ion-router-outlet> 
+
 </ion-app>
+
