--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -19,7 +19,7 @@
   <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
     <!-- campo de correo -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Correo Electronico</ion-label>
+      <ion-label position="floting">Correo:</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
@@ -29,11 +29,11 @@
 
     <!-- campo de contraseña -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Contraseña</ion-label>
+      <ion-label position="floting">Contraseña:</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
-      la contraseña es obligatoria
+      la contraseña es obligatoria y necesita 6 caracteres minimo
     </div>
 
     <!--Boton de inicio de sesion -->
