--- a/src/app/pages/registrar/registrar.page.html
+++ b/src/app/pages/registrar/registrar.page.html
@@ -1,14 +1,24 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title> DSOPCs </ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="registro-page">
+  <ion-card>
   <!-- titulo --->
-  <div class="title-container">
-    <h1 class="app-title">Registrarse</h1>
-  </div>
+  <ion-card-header>
+    <ion-card-title class="registro">Registrarse</ion-card-title>
+  </ion-card-header>
 
   <!-- formulario de registro-->
   <form [formGroup]="registroForm" (ngSubmit)="irRegistro()">
     <!-- campo de Nombre -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Nombre</ion-label>
+      <ion-label position="floting">Nombre:</ion-label>
       <ion-input type="text" formControlName="firstName"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="registroForm.get('firstName')?.touched && registroForm.get('firstName')?.invalid">
@@ -17,7 +27,7 @@
 
     <!-- campo de Apellido -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Apellido</ion-label>
+      <ion-label position="floting">Apellido:</ion-label>
       <ion-input type="text" formControlName="lastName"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="registroForm.get('lastName')?.touched && registroForm.get('lastName')?.invalid">
@@ -26,7 +36,7 @@
 
       <!-- campo de correo -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Correo electronico</ion-label>
+      <ion-label position="floting">Correo:</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="registroForm.get('email')?.touched && registroForm.get('email')?.invalid">
@@ -36,7 +46,7 @@
 
     <!-- campo de contraseña -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Contraseña</ion-label>
+      <ion-label position="floting">Contraseña:</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="registroForm.get('password')?.touched && registroForm.get('password')?.invalid">
@@ -45,7 +55,7 @@
 
     <!-- confirmar contraseña -->
     <ion-item class="input-item" lines="none">
-      <ion-label position="floting">Confirmar Contraseña</ion-label>
+      <ion-label position="floting">Confirmar Contraseña:</ion-label>
       <ion-input type="password" formControlName="confirmarPassword"></ion-input>
     </ion-item>
     <div class="error-message" *ngIf="registroForm.get('confirmarPassword')?.touched && registroForm.get('confirmarPassword')?.invalid">
@@ -55,12 +65,13 @@
     <!--Boton de Registro -->
     <ion-button type="submit" expand="block" color="primary" [disabled]="registroForm.invalid"> Registrar </ion-button>
   </form>
+</ion-card>
 
   <!--Enlaces a Login  -->
   <div class="links-container">
     <ion-text color="medium">
       <p>
-        ¿Ya tienes una cuenta? <a (click)="irLogin()">inicio de sesión</a>
+        ¿Ya tienes una cuenta? <a (click)="irLogin()">Inicio de sesión</a>
       </p>
     </ion-text>
   </div>
